--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -13,6 +13,7 @@
     justify-content: center;
     flex-direction: column;
     text-align: center;
+    height: auto;
     width: 100%;
     margin: 4rem;
     gap: 2rem;
