--- a/src/Components/Works/Works.css
+++ b/src/Components/Works/Works.css
@@ -1,17 +1,19 @@
 .works{
     padding: 0 3rem 0 3rem;
     display: flex;
-    height: 50vh;
+    height: auto;
     margin-top: 4rem;
 }
 .w-right{
-    position: relative
+    position: absolute;
+    display: flex;
+    left: 50%;
 }
 .w-maincircle{
     left: 9rem;
     position: relative;
-    width: 18rem;
     height: 18rem;
+    width: 18rem;
     border-radius: 100%;
     box-shadow: var(--smboxShadow);
     top: 2rem;
@@ -29,7 +31,7 @@
     height: 6rem;
     top: 6rem;
     left: 6rem;
-    position: absolute;
+    position: relative;
     border-radius: 100%;
     border: 5px solid white;
     display: flex;
