--- a/src/Components/Experience/Experience.css
+++ b/src/Components/Experience/Experience.css
@@ -21,6 +21,7 @@
     align-items: center;
     justify-content: center;
     font-size: 1.4rem;
+    color: blue;
     font-weight: bold;
     margin-bottom: 2rem ;
 }
